--- a/assets/pages/eagl3r-launcher.html
+++ b/assets/pages/eagl3r-launcher.html
@@ -326,26 +326,46 @@
             window.pJSDom = [];
         }
 
+        (function() {
+      const particlesEnabled = localStorage.getItem('dominum-particles') !== 'false';
+      const particlesContainer = document.getElementById('particles-js');
+
+      if (particlesEnabled) {
+        particlesContainer.style.display = 'block';
         particlesJS("particles-js", {
-            "particles": {
-                "number": { "value": 60 },
-                "color": { "value": [accent, blue] }, 
-                "shape": { "type": "circle" },
-                "opacity": { "value": 0.5, "random": true },
-                "size": { "value": 3, "random": true },
-                 "line_linked":{
-                    "enable":true, "distance":130, 
-                    "color": accent,
-                    "opacity":0.2, "width":1
-                },
-                "move": { "enable": true, "speed": 1.2, "direction": "none", "out_mode": "out" }
+          "particles": {
+            "number": { "value": 60 },
+            "color": { "value": ["#7a5cff", "#00bfff"] },
+            "shape": { "type": "circle" },
+            "opacity": { "value": 0.5 },
+            "size": { "value": 2 },
+            "line_linked": {
+              "enable": true,
+              "distance": 130,
+              "color": "#7a5cff",
+              "opacity": 0.2,
+              "width": 1
             },
-            "interactivity": {
-                "events": { "onhover": { "enable": true, "mode": "repulse" } },
-                "modes": { "repulse": { "distance": 100 } }
+            "move": {
+              "enable": true,
+              "speed": 1.2,
+              "direction": "none",
+              "out_mode": "out"
+            }
+          },
+          "interactivity": {
+            "events": {
+              "onhover": { "enable": true, "mode": "repulse" },
+              "onclick": { "enable": false }
             },
-            "retina_detect": true
+            "modes": { "repulse": { "distance": 100 } }
+          },
+          "retina_detect": true
         });
+      } else {
+        particlesContainer.style.display = 'none';
+      }
+    })();
     }
 
     function applyTheme(theme) {
