--- a/assets/pages/home.html
+++ b/assets/pages/home.html
@@ -143,36 +143,46 @@
 
   <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
   <script>
-    particlesJS("particles-js", {
-      "particles": {
-        "number": { "value": 60 },
-        "color": { "value": ["#7a5cff", "#00bfff"] },
-        "shape": { "type": "circle" },
-        "opacity": { "value": 0.5 },
-        "size": { "value": 2 },
-        "line_linked": {
-          "enable": true,
-          "distance": 130,
-          "color": "#7a5cff",
-          "opacity": 0.2,
-          "width": 1
-        },
-        "move": {
-          "enable": true,
-          "speed": 1.2,
-          "direction": "none",
-          "out_mode": "out"
-        }
-      },
-      "interactivity": {
-        "events": {
-          "onhover": { "enable": true, "mode": "repulse" },
-          "onclick": { "enable": false }
-        },
-        "modes": { "repulse": { "distance": 100 } }
-      },
-      "retina_detect": true
-    });
+(function() {
+      const particlesEnabled = localStorage.getItem('dominum-particles') !== 'false';
+      const particlesContainer = document.getElementById('particles-js');
+
+      if (particlesEnabled) {
+        particlesContainer.style.display = 'block';
+        particlesJS("particles-js", {
+          "particles": {
+            "number": { "value": 60 },
+            "color": { "value": ["#7a5cff", "#00bfff"] },
+            "shape": { "type": "circle" },
+            "opacity": { "value": 0.5 },
+            "size": { "value": 2 },
+            "line_linked": {
+              "enable": true,
+              "distance": 130,
+              "color": "#7a5cff",
+              "opacity": 0.2,
+              "width": 1
+            },
+            "move": {
+              "enable": true,
+              "speed": 1.2,
+              "direction": "none",
+              "out_mode": "out"
+            }
+          },
+          "interactivity": {
+            "events": {
+              "onhover": { "enable": true, "mode": "repulse" },
+              "onclick": { "enable": false }
+            },
+            "modes": { "repulse": { "distance": 100 } }
+          },
+          "retina_detect": true
+        });
+      } else {
+        particlesContainer.style.display = 'none';
+      }
+    })();
   </script>
 <script>
 const root = document.documentElement;
