--- a/assets/pages/settings.html
+++ b/assets/pages/settings.html
@@ -185,6 +185,72 @@ select option:checked {
 .file-upload-label:hover .file-browse-btn {
   background: var(--blue);
 }
+
+.toggle-setting {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 10px 5px;
+  font-size: 1.1em;
+  color: var(--text);
+  margin-top: 10px;
+}
+
+.toggle-switch {
+  position: relative;
+  display: inline-block;
+  width: 60px;
+  height: 34px;
+  flex-shrink: 0;
+}
+
+.toggle-switch input {
+  opacity: 0;
+  width: 0;
+  height: 0;
+}
+
+.slider {
+  position: absolute;
+  cursor: pointer;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  background-color: var(--card-bg);
+  border: 1px solid var(--border);
+  transition: .4s;
+}
+
+.slider:before {
+  position: absolute;
+  content: "";
+  height: 26px;
+  width: 26px;
+  left: 4px;
+  bottom: 4px;
+  background-color: var(--text);
+  transition: .4s;
+}
+
+input:checked + .slider {
+  background-color: var(--accent);
+  border-color: var(--accent);
+}
+
+input:checked + .slider:before {
+  transform: translateX(26px);
+  background-color: var(--bg);
+}
+
+.slider.round {
+  border-radius: 34px;
+}
+
+.slider.round:before {
+  border-radius: 50%;
+}
+
 </style>
 </head>
 <body>
@@ -213,7 +279,17 @@ select option:checked {
       <button id="saveCustom">Save Custom Theme</button>
     </div>
   </div>
-
+  
+  <div class="setting-box">
+    <label>Visual Settings</label>
+    <div class="toggle-setting">
+      <span>Enable Particles</span>
+      <label class="toggle-switch">
+        <input type="checkbox" id="particlesToggle">
+        <span class="slider round"></span>
+      </label>
+    </div>
+  </div>
   <div class="setting-box">
     <label>Tab Cloak</label>
     <select id="tabCloakPreset">
@@ -274,14 +350,29 @@ function getCookie(name){
   return match ? decodeURIComponent(match[2]) : null;
 }
 
-particlesJS("particles-js", {
-  "particles":{"number":{"value":60},"color":{"value":["#7a5cff","#00bfff"]},
-  "shape":{"type":"circle"},"opacity":{"value":0.5},"size":{"value":2},
-  "line_linked":{"enable":true,"distance":130,"color":"#7a5cff","opacity":0.2,"width":1},
-  "move":{"enable":true,"speed":1.2,"direction":"none","out_mode":"out"}},
-  "interactivity":{"events":{"onhover":{"enable":true,"mode":"repulse"}},
-  "modes":{"repulse":{"distance":100}}},"retina_detect":true
-});
+const particlesContainer = document.getElementById('particles-js');
+
+function initParticles() {
+    if (window.pJSDom && window.pJSDom.length > 0) return; // Already running
+    particlesContainer.style.display = 'block';
+    particlesJS("particles-js", {
+      "particles":{"number":{"value":60},"color":{"value":["#7a5cff","#00bfff"]},
+      "shape":{"type":"circle"},"opacity":{"value":0.5},"size":{"value":2},
+      "line_linked":{"enable":true,"distance":130,"color":"#7a5cff","opacity":0.2,"width":1},
+      "move":{"enable":true,"speed":1.2,"direction":"none","out_mode":"out"}},
+      "interactivity":{"events":{"onhover":{"enable":true,"mode":"repulse"}},
+      "modes":{"repulse":{"distance":100}}},"retina_detect":true
+    });
+}
+
+function destroyParticles() {
+    if (window.pJSDom && window.pJSDom.length > 0) {
+        window.pJSDom[0].pJS.fn.vendors.destroypJS();
+        window.pJSDom = [];
+    }
+    particlesContainer.style.display = 'none';
+}
+
 
 const root = document.documentElement;
 const themes = {
@@ -393,6 +484,29 @@ document.getElementById("saveCustom").onclick = () => {
     saveTheme("custom", custom);
     if (window.parent && window.parent.loadTheme) window.parent.loadTheme();
 };
+
+const particlesToggle = document.getElementById('particlesToggle');
+
+particlesToggle.addEventListener('change', () => {
+  if (particlesToggle.checked) {
+    localStorage.setItem('dominum-particles', 'true');
+    initParticles();
+  } else {
+    localStorage.setItem('dominum-particles', 'false');
+    destroyParticles();
+  }
+});
+
+function loadParticlesSetting() {
+  const particlesEnabled = localStorage.getItem('dominum-particles') !== 'false';
+  particlesToggle.checked = particlesEnabled;
+  if (particlesEnabled) {
+    initParticles();
+  } else {
+    destroyParticles();
+  }
+}
+
 document.getElementById("openAboutBlank").onclick=()=>{
   const win=window.open("about:blank","_blank");
   const iframe=win.document.createElement("iframe");
@@ -532,7 +646,9 @@ document.getElementById('importFile').onchange = function(event) {
         fileNameDisplay.style.opacity = '0.7';
     }
 };
+
 loadTheme();
+loadParticlesSetting();
 </script>
 </body>
 </html>
