Fixed the back to home button on the data url generator

--- a/assets/pages/data-generator.html
+++ b/assets/pages/data-generator.html
@@ -384,6 +384,14 @@
             window.location.href = "/assets/pages/home.html";
         }
     }
+
+  function openHomePage() {
+    if (window.parent && window.parent.document.getElementById("content-frame")) {
+      window.parent.document.getElementById("content-frame").src = "/assets/pages/home.html";
+    } else {
+      window.location.href = "/assets/pages/home.html";
+    }
+  }
   </script>
 </body>
 </html>
